force-app/main/default/objects/Self_Assessment_Assignment__c/Self_Assessment_Assignment__c.object-meta.xml
<CustomObject>
    <description>Junction object links Self-Assessment Templates to Service Sessions</description>
    <label>Self-Assessment Assignment</label>
    <nameField>
        <displayFormat>SAA-{000000}</displayFormat>
        <label>Self-Assessment Assignment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Self-Assessment Assignments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>