force-app/main/default/objects/Self_Assessment_Assignment__c/fields/Assign_To__c.field-meta.xml
<CustomField>
    <fullName>Assign_To__c</fullName>
    <description>Select whether generated self-assessments should be assigned to the Service Participant or Service Provider</description>
    <inlineHelpText>Select whether generated self-assessments should be assigned to the Service Participant or Service Provider</inlineHelpText>
    <label>Assign To</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Self_Assessment_Contact_Roles</valueSetName>
    </valueSet>
</CustomField>