force-app/main/default/objects/Self_Assessment_Assignment__c/fields/Days_Offset__c.field-meta.xml
<CustomField>
    <fullName>Days_Offset__c</fullName>
    <defaultValue>0</defaultValue>
    <description>For pre-session assignments, the number of days before the session to generate assessments. For post-session assignments the number of days after the session has passed. Set to 0 to create assessments on the day of the session.</description>
    <inlineHelpText>For pre-session assignments, the number of days before the session to generate assessments. For post-session assignments the number of days after the session has passed. Set to 0 to create assessments on the day of the session.</inlineHelpText>
    <label>Days Offset</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>