force-app/main/default/objects/Self_Assessment_Assignment__c/fields/Email_Template_Name__c.field-meta.xml
<CustomField>
    <fullName>Email_Template_Name__c</fullName>
    <description>The name of the email template to send to participants</description>
    <inlineHelpText>The name of the email template to send to participants</inlineHelpText>
    <label>Email Template Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>