force-app/main/default/objects/Self_Assessment_Assignment__c/fields/Is_Send_Date__c.field-meta.xml
<CustomField>
    <fullName>Is_Send_Date__c</fullName>
    <description>Indicates emails should be sent today</description>
    <formula>IF(
  AND(
    Send_Email__c, 
    OR(
      AND(
        ISPICKVAL( Type__c, &quot;Pre-Session&quot; ), 
        DATEVALUE( Service_Session__r.pmdm__SessionStart__c ) - Days_Offset__c == TODAY()
      ), 
      AND(
        ISPICKVAL( Type__c, &quot;Post-Session&quot; ), 
        DATEVALUE( Service_Session__r.pmdm__SessionStart__c ) + Days_Offset__c == TODAY()
      )
    )
  ),
  TRUE,
  FALSE
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Indicates emails should be sent today</inlineHelpText>
    <label>Is Send Date</label>
    <type>Checkbox</type>
</CustomField>