force-app/main/default/objects/Self_Assessment_Assignment__c/fields/Self_Assessment_Template__c.field-meta.xml
<CustomField>
    <fullName>Self_Assessment_Template__c</fullName>
    <label>Self-Assessment Template</label>
    <referenceTo>Self_Assessment_Template__c</referenceTo>
    <relationshipLabel>Self-Assessment Assignments</relationshipLabel>
    <relationshipName>Self_Assessment_Assignments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>