force-app/main/default/objects/Self_Assessment_Assignment__c/fields/Send_Email__c.field-meta.xml
<CustomField>
    <fullName>Send_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, emails will be sent to participants when an assessment has been generated</description>
    <inlineHelpText>If checked, emails will be sent to participants when an assessment has been generated</inlineHelpText>
    <label>Send Email</label>
    <type>Checkbox</type>
</CustomField>