force-app/main/default/objects/Self_Assessment_Assignment__c/validationRules/DaysOffsetMustBeDefined.validationRule-meta.xml
<ValidationRule>
    <fullName>DaysOffsetMustBeDefined</fullName>
    <active>true</active>
    <description>Pre or post session assignments must define a number of Days Offset</description>
    <errorConditionFormula>AND(
  OR(
    ISPICKVAL( Type__c, &quot;Pre-Session&quot; ), 
    ISPICKVAL( Type__c, &quot;Post-Session&quot; )
  ), 
  ISBLANK( Days_Offset__c )
)</errorConditionFormula>
    <errorDisplayField>Days_Offset__c</errorDisplayField>
    <errorMessage>Pre or post session assignments must define a number of Days Offset</errorMessage>
</ValidationRule>