force-app/main/default/objects/Self_Assessment_Assignment__c/validationRules/EmailTemplateMustBeDefined.validationRule-meta.xml
<ValidationRule>
    <fullName>EmailTemplateMustBeDefined</fullName>
    <active>true</active>
    <description>When Send Email is checked, an Email Template Name must be defined</description>
    <errorConditionFormula>Send_Email__c &amp;&amp; ISBLANK( Email_Template_Name__c )</errorConditionFormula>
    <errorDisplayField>Email_Template_Name__c</errorDisplayField>
    <errorMessage>When Send Email is checked, an Email Template Name must be defined</errorMessage>
</ValidationRule>